# ParallelComputerSystemsArchitecture

./: .gitignore  CMakeLists.txt  main.cpp  temp.cpp
lab1/: CMakeLists.txt  main.cpp  utility.cpp  utility.h
lab2/: CMakeLists.txt  main.cpp
